--- a/src/components/categorycardsmobile.css
+++ b/src/components/categorycardsmobile.css
@@ -7,31 +7,55 @@
     display: flex;
   }
   #CardGlass {
-    margin: 3px;
-    width: 48%;
+    width: 100%;
+    border: 1px solid gray;
     background: rgba(255, 255, 255, 0.07);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7.3px);
     -webkit-backdrop-filter: blur(7.3px);
-    border: 1px solid rgba(255, 255, 255, 0.45);
   }
   #CardGlass:hover {
     box-shadow: 0 4px 8px 0 rgba(17, 17, 17, 0.2),
       0 6px 20px 0 rgba(32, 32, 32, 0.19);
   }
   #CardGlass1 {
-    margin-left: 50%;
-    margin-top: -200px;
-    width: 48%;
+    width: 100%;
+    border: 1px solid gray;
     background: rgba(255, 255, 255, 0.07);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7.3px);
     -webkit-backdrop-filter: blur(7.3px);
-    border: 1px solid rgba(255, 255, 255, 0.45);
   }
   #CardGlass1:hover {
+    box-shadow: 0 4px 8px 0 rgba(19, 18, 18, 0.2),
+      0 6px 20px 0 rgba(27, 26, 26, 0.19);
+  }
+
+  #CardGlass2 {
+    width: 100%;
+    border: 1px solid gray;
+    background: rgba(255, 255, 255, 0.07);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.3px);
+    -webkit-backdrop-filter: blur(7.3px);
+  }
+  #CardGlass2:hover {
+    box-shadow: 0 4px 8px 0 rgba(17, 17, 17, 0.2),
+      0 6px 20px 0 rgba(32, 32, 32, 0.19);
+  }
+  #CardGlass3 {
+    width: 100%;
+    border: 1px solid gray;
+    background: rgba(255, 255, 255, 0.07);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.3px);
+    -webkit-backdrop-filter: blur(7.3px);
+  }
+  #CardGlass3:hover {
     box-shadow: 0 4px 8px 0 rgba(19, 18, 18, 0.2),
       0 6px 20px 0 rgba(27, 26, 26, 0.19);
   }
