--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -11,12 +11,24 @@
   z-index: 1;
   display: flex;
 }
-@media only screen and (max-width: 700px) {
+#categoryintroforbigscreen {
+  display: flex;
+}
+#categoryintroforsmallscreen {
+  display: none;
+}
+@media only screen and (max-width: 1000px) {
   #topproductadvertisment {
     position: absolute;
     top: 70px;
     left: 0%;
     z-index: 1;
     display: none;
+  }
+  #categoryintroforbigscreen {
+    display: none;
+  }
+  #categoryintroforsmallscreen {
+    display: flex;
   }
 }
